--- a/src/pages/maps/maps.scss
+++ b/src/pages/maps/maps.scss
@@ -1,3 +1,12 @@
-page-maps {
+.ios , .md{
+    page-maps {
+        .scroll{
+            height: 100%;
+        }
 
+        .map{
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
